--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,6 @@
 body{
     font-family: 'Grape Nuts', cursive;
-    background: lightblue;
+    background: grey;
     margin: 20px auto;
     text-align: center;
     max-width: 50%;
